--- a/patternselection.html
+++ b/patternselection.html
@@ -109,7 +109,7 @@
       <div class="w-1/5 px-2 p-4 items-center place-content-center flex">
         <button id="eightSateen">
           <img
-            src="semiotics-of-sound-show\images\eightSateen.png"
+            src="images/eightSateen.png"
           />
         </button>
       </div>
